--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ssr":  "npm run build:client-and-server-bundles && npm run webpack:server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:client": "ng build -prod --build-optimizer --app 0",
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -29,8 +30,13 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.9",
     "@angular/router": "^5.2.0",
+    "angular-bootstrap-md": "^5.2.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "node-sass": "^4.8.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
